# orthagogue

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackConfig.cmake~  CPackSourceConfig.cmake  Copyright.txt  Doxyfile  InstallationGuide.md  Interface.md  Makefile  Manual.md  ProjectHome.md  ReadMe.txt  TurboOrthoBuildSettings.cmake  TurboOrthoLibDeps.cmake  all.abc  all.mci  assert_corectness.bash  assert_mpi_correctness.bash  build_release.bash  centos_specic_settings.sh  cmake_install.cmake  co_orthologs.abc  co_orthologs.mci  compare_cpu_result.bash  configure.h  core_partLibDeps.cmake  err.txt  err.txt~  err_doxy.txt  err_mod_load.txt  err_module_2.txt  headerFile  headerFile.bak  inparalogs.abc  inparalogs.mci  install.bash  install_debug.bash  install_manifest.txt  logBuilderBuildSettings.cmake  (+36 more)
benchmark_code/: #mpi_1.9gb.sh#  1...4_cpus.txt.e134049  1...4_cpus.txt.o134049  1_and_2_cpus.txt.o134047  7_taxa.sh  CMakeLists.txt  Makefile  benchmark.cxx  benchmark.pl  biogw-db_all.bash  biogw-db_test_disk_buffer_size.bash  biogw-db_test_disk_buffer_size_all.bash  biogw_tbb_test.sh  cmake_install.cmake  difficult.bash  job_debug.sh  job_debug_valgrind.sh  job_multiple.sh  job_script.sh  job_single.sh  job_speedy_multiple.sh  job_valgrind.sh  job_valgrind_multiple.sh  job_valgrind_single.sh  mpi_10mb.sh  mult_reads_1_cpu.txt.o132160  mult_reads_1_cpu.txt.o132202  mult_reads_1_cpu.txt.o132204  mult_reads_1_cpu.txt.o132206  mult_reads_1_cpu.txt.o132210  mult_reads_1_cpu.txt.o132211  mult_reads_1_cpu.txt.o132212  mult_reads_1_cpu.txt.o132213  mult_reads_2_cpu.txt.o132215  mult_reads_3_cpu.txt.o132153  tbb_1.9gb.sh  test_disk_buffer_size  valgrind_on_manually_curated_blastp_file.sh  x_bench_mark
benchmark_code/result_files/: HsMmRn_line_cnt_output_c_1.txt  disk_buffer_100M_parse_only.txt  disk_buffer_10M_parse_only.txt  disk_buffer_500M_parse_only.txt  not_merge_disk_buffer_100M_parse_only.txt  not_merge_not_parse_second_disk_buffer_100M_parse_only.txt  not_second_parse_not_merge_not_parse_second_disk_buffer_100M_parse_only.o131671  result_c_x.txt  result_compiler_o2.txt
blast_common/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.developement  CMakeLists.txt.release  CPackConfig.cmake  CPackSourceConfig.cmake  L  Makefile  algo_overlap.cxx  algo_overlap.h  basket_parse.h  blast_commonBuildSettings.cmake  blast_commonLibDeps.cmake  blast_common_main.cxx  blast_common_main.h  blast_memory.cxx  blast_memory.h  cmake_install.cmake  constants.h  core_partBuildSettings.cmake  core_partLibDeps.cmake  enum_mcl.h  err_orthaGogue.txt_CMAKE  file_parse.h  files_for_libs.cmake  fix.txt  id_simil_list.cxx  id_simil_list.h  index.cxx  index.h  index_list.cxx  index_list.h  install_manifest.txt  internal.cmake  internal_blast  internal_blastBuildSettings.cmake  libs.h  list_file_chunk.cxx  list_file_chunk.h  list_file_parse.cxx  (+45 more)
blast_filtering/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  ReadMe.txt  blast_filtering.cxx  blast_filtering.h  blast_filteringBuildSettings.cmake  blast_filteringLibDeps.cmake  blast_filtering_main.cxx  blast_filtering_main.h  bucket_norm.cxx  bucket_norm.h  bucket_pipe_binary.cxx  bucket_pipe_binary.h  build_string.cxx  build_string.h  cmake_install.cmake  doxy.sh  enum_write_list_t.h  err_orthaGogue.txt_CMAKE  files_for_libs.cmake  main.h.in  meta_blast.h  pipe_bucket.cxx  pipe_bucket.h  pipe_merge.cxx  pipe_merge.h  pipe_norm.cxx  pipe_norm.h  pipe_ortholog_inparalog.cxx  pipe_ortholog_inparalog.h  pipe_struct.cxx  pipe_struct.h  pipe_struct_result.h  pipe_t.h  pipe_write.cxx  pipe_write.h  taxon_pair.cxx  taxon_pair.h  (+2 more)
blast_filtering/html/: annotated.html  blast__filtering_8h.html  blast__filtering_8h__dep__incl.md5  blast__filtering_8h__incl.md5  blast__filtering_8h_source.html  blast__filtering__main_8h.html  blast__filtering__main_8h__incl.md5  blast__filtering__main_8h_source.html  bucket__norm_8h.html  bucket__norm_8h__dep__incl.md5  bucket__norm_8h__incl.md5  bucket__norm_8h_source.html  bucket__pipe__binary_8h.html  bucket__pipe__binary_8h__dep__incl.md5  bucket__pipe__binary_8h__incl.md5  bucket__pipe__binary_8h_source.html  build__string_8h.html  build__string_8h__dep__incl.md5  build__string_8h__incl.md5  build__string_8h_source.html  classblast__filtering-members.html  classblast__filtering.html  classbuild__string-members.html  classbuild__string.html  classes.html  classpipe__binary-members.html  classpipe__binary.html  classpipe__bucket-members.html  classpipe__bucket.html  classpipe__bucket__coll__graph.md5  (+72 more)
blast_parsing/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  blast_extractors.cxx  blast_extractors.h  blast_parsing.cxx  blast_parsing.h  blast_parsingBuildSettings.cmake  blast_parsingLibDeps.cmake  blast_parsing_main.cxx  blast_parsing_main.h  bp_container.h  buffer_string.cxx  buffer_string.h  buffer_string_list.cxx  buffer_string_list.h  cmake_install.cmake  err_orthaGogue.txt_CMAKE  files_for_libs.cmake  parse_read_blocks.cxx  parse_read_blocks.h  parse_send.cxx  parse_send.h  parse_send_first.cxx  parse_send_first.h  pipe_parse_file.cxx  pipe_parse_file.h  pipe_parse_merge.cxx  pipe_parse_merge.h  pipe_parse_parse.cxx  pipe_parse_parse.h  pre_read_blast.cxx  pre_read_blast.h  read_file.cxx  read_file.h  string_section.cxx  string_section.h  taxa_buffer_list_settings.h  taxa_list_of_lists_settings.h  (+8 more)
log_builder/: CMakeLists.txt  Makefile  ProjectBuildSettings.cmake  ProjectLibDeps.cmake  cmake_install.cmake  enum_logid.h  err_orthaGogue.txt_CMAKE  files_for_libs.cmake  logBuilderBuildSettings.cmake  log_builder.cxx  log_builder.h  log_builder_main.cxx  log_builder_main.h  readme.txt  temp.cxx  turbopaths.cmake  x_log_builder
terminal_input/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmd_argument.cxx  cmd_argument.h  cmd_constants.h  cmd_lineBuildSettings.cmake  cmd_lineLibDeps.cmake  cmd_list.cxx  cmd_list.cxx~  cmd_list.h  enum_argument_types.h  err_orthaGogue.txt_CMAKE  files_for_libs.cmake  main_cmd_line.cxx  main_cmd_line.h  x_cmd_line  x_terminal
(+350 files in other folders)
